--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
 }
 
 .logo {
-  height: 6em;
+  height: 40vh;
   padding: 1.5em;
   will-change: filter;
   transition: filter 300ms;
@@ -15,7 +15,7 @@
   filter: drop-shadow(0 0 2em #646cffaa);
 }
 .logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+  filter: drop-shadow(0 0 5em #61dafbaa);
 }
 
 @keyframes logo-spin {
