--- a/src/CSS/Projects.css
+++ b/src/CSS/Projects.css
@@ -1,49 +1,88 @@
 #projectsGrid {
-  height: 100%;
-  display: grid;
-  grid-template-rows: 1fr 2fr 1fr;
-  overflow: hidden;
-  justify-content: center;
-  text-align: center;
-}
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    overflow: hidden;
+  }
+  
+  #projectsGrid p {
+    width: auto;
+    color: rgb(0, 0, 0);
+    padding-bottom: 1vh;
+    text-transform: uppercase;
+    font-weight: bold;
+    transition: transform 0.3s ease; 
 
-#carouselGrid {
-  width: 100%;
-  display: grid;
-  grid-template-columns: repeat(5, 1fr);
-}
-
-.square {
+  }
+  
+  #projectNavigation {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  
+  #projectNavigation .square {
     margin-top: 1.4vh;
     margin-bottom: 2.8vh;
     margin-left: 1.4vw;
     margin-right: 1.4vw;
-    background-color: red;
     box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 15vh;
+    height: 15vh;
+    cursor: pointer;
+    transition: transform 0.3s ease-in-out;
+  }
+  
+  #projectNavigation .square img {
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: cover;
+  }
+  
+  #projectNavigation .square p {
+    color: black;
+    text-transform: uppercase;
+    font-weight: normal;
+    font-size: 1.75vh;
+    font-style: italic;
+  }
+  
+  #projectDisplay {
+    width: 65vh;
+    height: 31.5vh;
+    box-sizing: border-box;
+    box-shadow: 5px;
+    transition: transform 0.3s ease; 
+  }
+  
+  #projectDisplay img {
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: cover;
+  }
+  
+  .grow {
+    transform: scale(1.1); 
+  }
+  
+  .shrink {
+    transform: scale(0.9);
+  }
+  
+  .project-buttons {
+    display: flex;
+    justify-content: center;
+    gap: 1vh; 
+  }
+  
+  #projectDescription {
     display: flex;
     justify-content: center;
     align-items: center;
   }
   
-  .square img {
-    max-width: 100%;
-    max-height: 100%;
-    object-fit: cover;
-  }
-
-#projectCanvas {
-  display: flex;
-  justify-content: center;
-}
-
-#projectDisplay {
-  width: 70vh;
-  height: 35vh;
-  background-color: blue;
-}
-
-#projectDescription {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
