--- a/src/CSS/Projects.css
+++ b/src/CSS/Projects.css
@@ -1,107 +1,115 @@
 #projectsGrid {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-direction: row;
+  justify-content: center;
   overflow: hidden;
 }
 
-#projectsGrid p {
-  width: auto;
+#projectsGrid .project-title {
+  width: 100%;
+  text-align: center;
   color: rgb(91, 174, 176);
-  padding-bottom: 1vh;
   text-transform: uppercase;
   font-weight: bold;
-  transition: transform 0.3s ease;
+  margin-bottom: 1vh;
+  font-style: italic;
 }
 
-#projectNavigation {
-  width: 100%;
+#projectContainer {
   display: flex;
+  flex-direction: column;
+  width: 90%;
+  padding-right: 2vw;
+  border-right: 1px solid #ccc;
+}
+
+#projectContent {
+  display: flex;
+  flex-direction: row;
   justify-content: space-between;
   align-items: center;
 }
 
-#projectNavigation .square {
-  margin-top: 1.4vh;
-  margin-bottom: 2.8vh;
-  margin-left: 1.4vw;
-  margin-right: 1.4vw;
-  box-sizing: border-box;
+#leftColumn {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 20%;
+}
+
+#leftColumn .square {
+  width: 12vh;
+  height: 12vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 15vh;
-  height: 15vh;
   cursor: pointer;
-  transition: transform 0.3s ease-in-out;
 }
 
-#projectNavigation .square img {
+#leftColumn .square img {
   max-width: 100%;
   max-height: 100%;
   object-fit: cover;
 }
 
-#projectNavigation .square p {
-  color: black;
+#leftColumn .square p {
+  color: rgb(91, 174, 176);
   text-transform: uppercase;
-  font-weight: normal;
+  font-weight: bold;
   font-size: 1.75vh;
   font-style: italic;
-  color: rgb(91, 174, 176);
 }
 
-#projectDisplay {
-  width: 65vh;
-  height: 31.5vh;
-  box-sizing: border-box;
-  box-shadow: 5px;
-  transition: transform 0.3s ease;
+#mainImage {
+  width: 50vh;
+  height: 30vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-#projectDisplay img {
+#mainImage img {
   max-width: 100%;
   max-height: 100%;
   object-fit: cover;
+  transition: transform 0.3s ease;
+
 }
 
-.grow {
+#mainImage:hover img {
   transform: scale(1.1);
 }
 
-.shrink {
-  transform: scale(0.9);
-}
-
-#projectButtonsArea {
-  display: flex;
-  justify-content: center;
-  gap: 1vh;
-  padding-top: 2vh;
+#buttonsColumn {
+  width: 30%;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
-  align-items: flex-end;
-  height: 100%;
+  align-items: flex-start;
+  justify-content: center;
+  padding-left: 2vw;
 }
 
-.projectButton {
+#buttonsColumn .projectButton, .projectButtonOutliers {
+  
+  width: 100%;
+  text-align: left;
   font-weight: bold;
-  background-color: rgb(91, 174, 176);
+  background-color: rgba(91, 175, 176, 0.654);
   color: #fff;
   padding: 0.5vw 0.5vw;
+  margin: 0.5vh 0;
   white-space: nowrap;
   cursor: pointer;
-  margin: 0.25vw;
-  text-transform: uppercase;
   border: none;
-  min-width: 7vw;
+  text-transform: uppercase;
 }
 
-#projectDescription {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding-top: 1.8vh;
+#buttonsColumn .projectButtonOutliers {
+  width: 100%;
+  background-color: rgb(91, 174, 176);
+  text-align: center;
+
 }
+
