working projects, digital card, contact me

--- a/src/CSS/ContentArea.css
+++ b/src/CSS/ContentArea.css
@@ -48,13 +48,10 @@ header {
   position: absolute;
   font-weight: bold;
   text-decoration: none; 
-  left: 50%;
-  top: 19vh;
-  transform: translateX(-50%);
-  background-color: rgb(91, 174, 176);
+  right: 11vh;
+  bottom: 11.15vh;
   color: #fff;
   padding: 10px 20px;
-  border-radius: 5px;
   white-space: nowrap;
   z-index: 4;
   cursor: pointer;
@@ -62,12 +59,12 @@ header {
 
 #contactButton a {
   font-size: 2.5vh;
-  text-decoration: none; /* Remove underline */
-  color: inherit; /* Use the inherited text color */
+  text-decoration: none; 
+  color: inherit; 
 }
 
 #contactButton a:hover {
-  color: rgb(46, 59, 120); /* Optional: Change link color on hover */
+  color: rgb(46, 59, 120);
 }
 
 #digitalCard {
