--- a/src/CSS/DigitalCard.css
+++ b/src/CSS/DigitalCard.css
@@ -5,5 +5,12 @@
   text-transform: uppercase;
   font-weight: bold;
   font-style: italic;
-  transform: translateY(2.5vh);
+  transform: translateY(3.45vh);
 }
+
+#digitalCard {
+    height: 50vh;
+    width: auto;
+    box-shadow:0.5vh 0.5vh 1vh rgba(0, 0, 0, 0.7);
+  
+  }
