--- a/src/CSS/Projects.css
+++ b/src/CSS/Projects.css
@@ -13,6 +13,7 @@
   font-weight: bold;
   margin-bottom: 1vh;
   font-style: italic;
+  transform: translateY(-0.6vh);
 }
 
 #projectContainer {
@@ -20,7 +21,7 @@
   flex-direction: column;
   width: 90%;
   padding-right: 2vw;
-  border-right: .25vw solid #ccc;
+  border-right: 0.25vw solid #ccc;
 }
 
 #projectContent {
@@ -52,6 +53,7 @@
   max-width: 100%;
   max-height: 100%;
   object-fit: cover;
+  box-shadow: 0.25vh 0.25vh 0.5vh rgba(0, 0, 0, 0.7);
 }
 
 #leftColumn .square p {
@@ -64,10 +66,11 @@
 
 #mainImage {
   width: 50vh;
-  height: 30vh;
+  height: 26.6vh;
   display: flex;
   justify-content: center;
   align-items: center;
+  box-shadow: 0.5vh 0.5vh 1vh rgba(0, 0, 0, 0.7);
 }
 
 #mainImage img {
@@ -136,7 +139,6 @@
   font-size: 2.5vh;
 }
 
-
 .navLink {
   text-decoration: none; /* Remove underline */
   color: inherit; /* Use the inherited text color */
@@ -144,6 +146,25 @@
 }
 
 .navLink:hover {
-  color: #007BFF; /* Optional: Change link color on hover */
+  color: #007bff; /* Optional: Change link color on hover */
 }
 
+.bold {
+  font-weight: bold;
+}
+
+.center {
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.left {
+  text-align: left;
+  justify-content: flex-start;
+  align-items: flex-start;
+}
+
+.italics {
+  font-style: italic;
+}
