--- a/src/CSS/NavBar.css
+++ b/src/CSS/NavBar.css
@@ -20,7 +20,7 @@
   .navbar a {
     text-decoration: none; /* Remove underline */
     color: inherit; /* Use the inherited text color */
-    padding: .5vw; /* Optional: Add some padding around the link */
+    padding: .75vh; /* Optional: Add some padding around the link */
   }
   
   .navbar a:hover {
