--- a/src/CSS/Projects.css
+++ b/src/CSS/Projects.css
@@ -20,8 +20,8 @@
   display: flex;
   flex-direction: column;
   width: 90%;
-  padding-right: 2vw;
-  border-right: 0.25vw solid #ccc;
+  padding-right: 3vh;
+  border-right: 0.25vh solid #ccc;
 }
 
 #projectContent {
@@ -90,7 +90,7 @@
   flex-direction: column;
   align-items: flex-start;
   justify-content: center;
-  padding-left: 2vw;
+  padding-left: 2.5vh;
 }
 
 #buttonsColumn .projectButton,
@@ -100,7 +100,7 @@
   font-weight: bold;
   background-color: rgba(91, 175, 176, 0.654);
   color: #fff;
-  padding: 0.5vw 0.5vw;
+  padding: 0.75vh 0.75vh;
   margin: 0.5vh 0;
   white-space: nowrap;
   cursor: pointer;
@@ -142,11 +142,11 @@
 .navLink {
   text-decoration: none; /* Remove underline */
   color: inherit; /* Use the inherited text color */
-  padding: 0.5vw; /* Optional: Add some padding around the link */
+  padding: 0.75vh; /* Optional: Add some padding around the link */
 }
 
 .navLink:hover {
-  color: #007bff; /* Optional: Change link color on hover */
+  color: #007bff; 
 }
 
 .bold {
