fixing emailJS not working after deployment

--- a/src/CSS/Projects.css
+++ b/src/CSS/Projects.css
@@ -96,6 +96,7 @@
 #buttonsColumn .projectButton,
 #buttonsColumn .projectButtonOutliers {
   width: 100%;
+  font-size: 2vh;
   text-align: left;
   font-weight: bold;
   background-color: rgba(91, 175, 176, 0.654);
@@ -126,6 +127,8 @@
   height: auto;
   text-align: left;
   overflow: hidden;
+  font-size: 2.5vh;
+
 }
 
 #commentsSection .bold {
