--- a/src/CSS/DigitalCard.css
+++ b/src/CSS/DigitalCard.css
@@ -5,14 +5,33 @@
   text-transform: uppercase;
   font-weight: bold;
   font-style: italic;
-  transform: translateY(3.45vh);
+  transform: translateY(1vh);
+  z-index: 5;
 }
 
 #digitalCard {
-    height: 50vh;
-    width: auto;
-    box-shadow:0.5vh 0.5vh 1vh rgba(0, 0, 0, 0.7);
-  
-  }
+  transform: translateY(-2.5vh);
 
-  
+  height: 50vh;
+  width: auto;
+  box-shadow: 0.5vh 0.5vh 1vh #000000b3;
+}
+
+.contactButton {
+  display: inline-block;
+  margin-top: 2vh;
+  padding: 1vh 2vh;
+  background-color: rgb(91, 174, 176);
+  color: white;
+  text-transform: uppercase;
+  font-weight: bold;
+  text-decoration: none;
+  border-radius: 0.5vh;
+  transition: background-color 0.3s ease;
+  transform: translateY(-2vh)
+}
+
+.contactButton:hover {
+  background-color: rgb(46, 59, 120);
+}
+
