--- a/src/CSS/App.css
+++ b/src/CSS/App.css
@@ -18,57 +18,6 @@ p {
   margin: 0;
 }
 
-h1 {
-  width: auto; 
-  position: absolute;
-  transform: translate(7.5vh, 21vh);
-  background-color: white;
-  color: rgb(91, 174, 176);
-  margin: 0;
-  padding: 0px 2.5vh;
-  z-index:5;
-  font-size: 3vh;
-  white-space: nowrap;
-
-}
-
-h2 {
-  position: absolute;
-  right: 11.5%;
-  bottom: 11.5%;
-  background-color: white;
-  color: rgb(91, 174, 176);
-  margin: 0;
-  padding: 0px 2.5vh;
-  z-index:5;
-  font-size: 3vh;
-  font-style: italic;
-
-}
-
-h2::before, h2::after {
-  content: "";
-  position: absolute;
-  bottom: -.1vh;
-  width: 0;
-  height: .5vh;
-  background-color: rgb(91, 174, 176);
-  transition: width 0.4s  ease-in-out;
-}
-
-h2::before {
-  left: 42.5%;
-}
-
-h2::after {
-  right: 42.5%;
-}
-
-h2:hover::before, h2:hover::after {
-  width: 50%;
-  cursor: pointer;
-}
-
 .center {
   display: flex;
   flex-direction: column;
@@ -82,4 +31,31 @@ h2:hover::before, h2:hover::after {
   display: flex;
   flex-direction: row;
   position: relative;
+  overflow: hidden;
+}
+
+@media (max-width: 600px) {
+  body {
+    margin: 0;
+    padding: 0;
+    font-size: 2.5vh;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    overflow: hidden;
+  }
+  #overall {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    overflow: hidden;
+  }
+  .example-2 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    position: absolute;
+    transform: translate(20%, 80%);
+    z-index: 7;
+  }
 }
