--- a/src/CSS/ContactForm.css
+++ b/src/CSS/ContactForm.css
@@ -39,7 +39,7 @@
     text-transform: uppercase;
     margin-bottom: .25vh;
     font-weight: bold;
-    font-size: 4.5vw;
+    font-size: 2.5vh;
     color: rgb(91, 174, 176);
   }
   
@@ -50,7 +50,7 @@
     margin-bottom: 1.25vh;
     border: 0.25vh solid rgb(91, 174, 176);
     border-radius: 0.75vh;
-    font-size: 4.5vw;
+    font-size: 2.5vh;
     box-sizing: border-box;
   }
 
@@ -76,7 +76,7 @@
     text-align: center;
     justify-content: center;
     align-items: center;
-    font-size: 4.5vw;
+    font-size: 2.5vh;
     color: rgb(91, 174, 176);
     margin-top: 2vh;
   }
