fixed Lets Chat

--- a/src/CSS/ContentArea.css
+++ b/src/CSS/ContentArea.css
@@ -187,17 +187,16 @@ footer {
     font-weight: bold;
     text-decoration: none;
     height: 3vh;
-    width: auto;
+    width: 100vw;
     left: 0vw;
     bottom: 5vh;
     color: #fff;
     padding: 0;
     white-space: nowrap;
-    z-index: 4;
     cursor: pointer;
-    right: 0;
-    color: #fff;
-    padding: 0;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
   }
 
   #contactButton a {
@@ -228,16 +227,16 @@ footer {
 
   h2 {
     transform: none;
+    left: 50%;
+    transform: translateX(-50%);
     width: auto;
     white-space: nowrap;
-    text-align: center;
     padding: 0;
     background-color: white;
     color: rgb(91, 174, 176);
     margin: 0;
     padding-left: 0.5vh;
     padding-right: 0.5vh;
-    z-index: 5;
     font-size: 2.25vh;
     font-style: italic;
   }
